# GPTerm

./: .env.example  .gitignore  .gpterm_history  README.md  gpterm-0.0.0-py2.py3-none-any.whl  hatch.toml  pyproject-original.toml  pyproject.toml
gpterm/: __init__.py  chat.py  context.py  history.py
gpterm-flit/gpterm/: LICENSE  pyproject.toml
gpterm-flit/gpterm/gpterm/: __init__.py  chario.py  chat.py  history.py
src/gpterm/: .gpterm_history  chario.py  chat.py  context.py  entry.py  hello.py  history.py
tests/: test_hello.py
